# clib-in-haskell

./: .gitignore  README.md
clib/: liba.c  liba.h  libb.c  libb.h  main.c
haskell/: haskell.cabal
haskell/src/: LibAb.hs  Main.hs
